# University-Dormitory-Management-System

./: CMakeLists.txt  README.md  dormitory.cpp  dormitory.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  restaurant.cpp  restaurant.h  room.cpp  room.h  student.cpp  student.h  university.cpp  university.h
